# proxmox-mcp

./: .dockerignore  .env.example  .gitignore  .mcpbignore  CLAUDE.md  Dockerfile  LICENSE  README.md  compose.yaml  glama.json  manifest.json  pyproject.toml  smithery.yaml  task.md
.github/workflows/: ci.yml  docker-publish.yml
src/proxmox_mcp/: __init__.py  __main__.py  client.py  config.py  server.py
src/proxmox_mcp/tools/: __init__.py  _common.py  cluster.py  containers.py  nodes.py  storage.py  vms.py
tests/: test_policy.py  test_registration.py
