[project]
name = "proxmox-ve-mcp"
version = "1.0.6"
description = "MCP server for Proxmox VE management"
readme = "README.md"
authors = [
    { name = "Artur Akmalov", email = "artur@akmalov.com" }
]
requires-python = ">=3.14"
dependencies = [
    "mcp[cli]>=1.9",
    "proxmoxer>=2.1",
    "requests>=2.32",
    "pydantic-settings>=2.9",
]

[project.scripts]
proxmox-ve-mcp = "proxmox_mcp.server:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "proxmox_mcp"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.7",
    "mypy>=1.13",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.14"
files = ["src"]
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["mcp.*", "proxmoxer.*", "pydantic_settings.*"]
ignore_missing_imports = true
